2021-04-25  7.0.11-10  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-9 GIT revision 18...

2021-04-25  7.0.11-10  <quetzlzacatenango@image...>
  * Optimize CompareImageBounds().

2021-04-25  7.0.11-9  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-9 GIT revision 18...

2021-04-25  7.0.11-9  <quetzlzacatenango@image...>
  * eliminate uninitialized value
  * Differences in computing linear gray (reference
    https://github.com/ImageMagick/ImageMagick/issues/3571).

2021-04-17  7.0.11-8  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-8 GIT revision 18636:53a252607:20210417

2021-04-17  7.0.11-8  Dirk Lemstra <dirk@lem.....org>
  * added support for pdf:author, pdf:producer and pdf:title when writing a
    PDF file.

2021-04-10  7.0.11-7  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-7 GIT revision 18617:2a0925961:20210411

2021-04-09  7.0.11-7  <quetzlzacatenango@image...>
  * constrain sub-image list.
  * -layers optimize no longer produces broken output (reference
    https://github.com/ImageMagick/ImageMagick/issues/3520).

2021-04-03  7.0.11-6  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-6 GIT revision 18588:ea711b44c:20210403

2021-04-01  7.0.11-6  Dirk Lemstra <dirk@lem.....org>
  * fix portable Windows build.

2021-03-28  7.0.11-5  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.11-5 GIT revision 18569:b934dca6b:20210328

2021-03-25  7.0.11-5  Dirk Lemstra <dirk@lem.....org>
  * OpenCL will be disabled by default, use the environment variable
    MAGICK_OCL_DEVICE to turn it on or select the device to use.

2021-03-24  7.0.11-5  <quetzlzacatenango@image...>
  * eliminate extraneous spaces in AC_PATH_PROG (reference
    https://github.com/ImageMagick/ImageMagick/issues/3428).
  * fix handling of non-square images with -fft option.
  * enable FFTW support with --with-fftw configure script command-line option.
